--- a/src/app/core/admin/audit/audit-list.component.html
+++ b/src/app/core/admin/audit/audit-list.component.html
@@ -12,7 +12,7 @@
 		<div class="col-md-2">
 			<div class="quick-select card">
 				<div>
-					<span class="collapsible" (click)="shown = !shown">
+					<span class="collapsible" (click)="actorFormShown = !actorFormShown">
 						<span class="quick-select-title">
 							<span class="fa fa-user"></span>
 							Actor:
