--- a/src/styles/_ngx-bootstrap.scss
+++ b/src/styles/_ngx-bootstrap.scss
@@ -2,6 +2,8 @@
 
 @import '../../node_modules/bootstrap/scss/bootstrap';
 
+@import '../../node_modules/ngx-bootstrap/datepicker/bs-datepicker';
+
 /**
  * ngx-bootstrap.scss
 
@@ -17,6 +19,7 @@
 @import './ngx-bootstrap/tooltips';
 @import './ngx-bootstrap/nav';
 @import './ngx-bootstrap/modal';
+@import './ngx-bootstrap/datepicker';
 
 
 @include text-emphasis-variant(".text-highlight", $ux-color-highlight);
