--- a/src/app/common/breadcrumb/breadcrumb.component.html
+++ b/src/app/common/breadcrumb/breadcrumb.component.html
@@ -1,10 +1,9 @@
-<div [ngSwitch]="showBreadcrumbs">
-	<div *ngSwitchCase="false" class="header">{{ _homeBreadcrumb?.label }}</div>
-	<div *ngSwitchCase="true" class="header">
-		<span *ngFor="let b of breadcrumbs; let last = last" class="header-breadcrumb">
+<div class="header">
+	<ng-container *ngFor="let b of breadcrumbs; let last = last" class="header-breadcrumb">
+		<span class="header-breadcrumb">
 			<a *ngIf="!last" [routerLink]="[b.url]">{{ b?.label }}</a>
-			<span *ngIf="last">{{ b?.label }}</span>
-			<span *ngIf="!last" class="header-breadcrumb-separator"> > </span>
+			<ng-container *ngIf="last">{{ b?.label }}</ng-container>
 		</span>
-	</div>
+		<span *ngIf="!last" class="header-breadcrumb-separator"> > </span>
+	</ng-container>
 </div>
