--- a/src/styles/_ngx-bootstrap.scss
+++ b/src/styles/_ngx-bootstrap.scss
@@ -15,6 +15,7 @@
 @import './ngx-bootstrap/cards';
 @import './ngx-bootstrap/dropdowns';
 @import './ngx-bootstrap/forms';
+@import './ngx-bootstrap/grid';
 @import './ngx-bootstrap/popovers';
 @import './ngx-bootstrap/tooltips';
 @import './ngx-bootstrap/nav';
