--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -1,2 +1,6 @@
+$enable-nav-aware-grid-classes: true !default;
 $form-required: after !default;
 $border-radius: 2px !default;
+
+$ux-nav-closed-width: 54px !default;
+$ux-nav-open-width: 238px !default;
