ensure dropdowns have proper bootstrap classes

--- a/src/app/core/admin/user-management/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/admin-list-users.component.html
@@ -77,8 +77,8 @@
 						</ng-container>
 					</td>
 					<td class="text-right" style="max-width: 50px;">
-						<span dropdown container="body" placement="top left" class="border-left pl-2 py-1">
-							<span class="px-2" style="cursor: pointer;" dropdownToggle>
+						<span class="dropdown border-left pl-2 py-1" container="body" dropdown>
+							<span class="dropdown-toggle dropdown-toggle-hide-caret px-2" style="cursor: pointer;" dropdownToggle>
 								<span class="fa fa-lg fa-ellipsis-v"></span>
 							</span>
 							<ul *dropdownMenu class="dropdown-menu dropdown-menu-right mt-2">
