--- a/src/app/core/teams/add-members-modal/add-members-modal.component.html
+++ b/src/app/core/teams/add-members-modal/add-members-modal.component.html
@@ -41,9 +41,9 @@
 				<td><div class="hide-overflow fixed-column" [attr.title]="invited.username">{{ invited.username }}</div></td>
 				<td>
 					<div>
-						<div class="btn-group" dropdown>
-							<button type="button" class="btn dropdown-toggle" dropdownToggle>
-								<span class="float-left" style="margin-right: 4px;">{{ invited.roleDisplay }}</span>
+						<div class="btn-group dropdown" dropdown>
+							<button type="button" class="btn dropdown-toggle dropdown-toggle-table" dropdownToggle>
+								<span class="float-left mr-1">{{ invited.roleDisplay }}</span>
 							</button>
 
 							<ul *dropdownMenu class="dropdown-menu" role="menu">
