--- a/src/app/core/admin/cache-entries/cache-entries.component.html
+++ b/src/app/core/admin/cache-entries/cache-entries.component.html
@@ -32,8 +32,8 @@
 				<td class="hide-overflow" style="max-width: 300px;">{{cacheEntry.entry.value | json}}</td>
 				<td><span [attr.title]="cacheEntry.entry.ts | utcDate">{{cacheEntry.entry.ts | agoDate:false}}</span></td>
 				<td class="text-right" style="max-width: 50px;">
-					<span dropdown container="body" placement="top left" class="border-left pl-2 py-1">
-						<span class="px-2" style="cursor: pointer;" dropdownToggle>
+					<span class="dropdown border-left pl-2 py-1" container="body" dropdown>
+						<span class="dropdown-toggle dropdown-toggle-hide-caret px-2" style="cursor: pointer;" dropdownToggle>
 							<span class="fa fa-lg fa-ellipsis-v"></span>
 						</span>
 						<ul *dropdownMenu class="dropdown-menu dropdown-menu-right mt-2">
