--- a/src/app/core/admin/end-user-agreement/admin-list-euas.component.html
+++ b/src/app/core/admin/end-user-agreement/admin-list-euas.component.html
@@ -47,8 +47,8 @@
 					<td [hidden]="!columns.published.show">{{ eua.euaModel.published | utcDate }}</td>
 
 					<td class="text-right" style="max-width: 50px;">
-						<span dropdown container="body" placement="top left" class="border-left pl-2 py-1">
-							<span class="px-2" style="cursor: pointer;" dropdownToggle>
+						<span class="dropdown border-left pl-2 py-1" container="body" dropdown>
+							<span class="dropdown-toggle dropdown-toggle-hide-caret px-2" style="cursor: pointer;" dropdownToggle>
 								<span class="fa fa-lg fa-ellipsis-v"></span>
 							</span>
 							<ul *dropdownMenu class="dropdown-menu dropdown-menu-right mt-2">
