--- a/src/app/core/messages/admin/list-messages.component.html
+++ b/src/app/core/messages/admin/list-messages.component.html
@@ -35,8 +35,8 @@
 				<td>{{message.created | agoDate:false}}</td>
 				<td>{{message.updated | agoDate:false}}</td>
 				<td class="text-right" style="max-width: 50px;">
-					<span dropdown container="body" placement="top left" class="border-left pl-2 py-1">
-						<span class="px-2" style="cursor: pointer;" dropdownToggle>
+					<span class="dropdown border-left pl-2 py-1" container="body" dropdown>
+						<span class="dropdown-toggle dropdown-toggle-hide-caret px-2" style="cursor: pointer;" dropdownToggle>
 							<span class="fa fa-lg fa-ellipsis-v"></span>
 						</span>
 						<ul *dropdownMenu class="dropdown-menu dropdown-menu-right mt-2">
