--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,10 @@ html {
 	min-height: 100%;
 }
 
+article, aside, footer, header, nav, section {
+	display: block;
+}
+
 @if $form-required == before {
 	.form-required:before {
 		content: '*';
