--- a/src/app/core/messages/recent-messages/recent-messages.component.html
+++ b/src/app/core/messages/recent-messages/recent-messages.component.html
@@ -5,10 +5,10 @@
 			<div class="col col-alert-icon {{ message.type | lowercase }}">
 				<span class="fa alert-icon {{ message.type | lowercase }}"
 					  [ngClass]="{
-						'fa-check': message.type.toLowerCase() === 'motd',
-						'fa-info': message.type.toLowerCase() === 'info',
-						'fa-exclamation': message.type.toLowerCase() === 'warn',
-						'fa-exclamation-triangle': message.type.toLowerCase() === 'error'
+						'fa-check': message.type === 'MOTD',
+						'fa-info': message.type === 'INFO',
+						'fa-exclamation': message.type === 'WARN',
+						'fa-exclamation-triangle': message.type === 'ERROR'
 						}"></span>
 			</div>
 			<div class="col-alert-body">
